--- a/src/main/resources/templates/performances/add.html
+++ b/src/main/resources/templates/performances/add.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Add a performance</h1>
     <form action="/performances/save" method="POST" th:object="${performance}">
-        <input type="hidden" th:field="*{id}"
+        <input type="hidden" th:field="*{id}"/>
         <p>Name of performance: <input type="text" th:field="*{title}" /> </p>
         <input type="submit" />
     </form>
